# HIS

./: .gitignore  README.md
Solvers/replanner/: CMakeLists.txt  CompiledProblem.cpp  CompiledProblem.h  k_replanner.cpp  replanner.cpp  replanner.h  utils.cpp  utils.h
Solvers/replanner/compilations/: compiler.h  kat.cpp  kat.h  kminrob.cpp  kminrob.h  kp.cpp  kp.h  limited_kp.cpp  limited_kp.h
Solvers/replanner/planners/: FastDownward.cpp  FastDownward.h  FastForward.cpp  FastForward.h  Planner.h  planner_factory.h
Solvers/replanner/problem/: Action.cpp  Action.h  Budget.cpp  Budget.h  Fact.cpp  Fact.h  Formula.cpp  Formula.h  Function.cpp  Function.h  FunctionFormula.cpp  FunctionFormula.h  Invariant.cpp  Invariant.h  PDDLObject.cpp  PDDLObject.h  Parameter.cpp  Parameter.h  Predicate.cpp  Predicate.h  Problem.cpp  Problem.h  Sensor.cpp  Sensor.h  Term.cpp  Term.h  Type.cpp  Type.h  Variable.cpp  Variable.h
src/: defs.py  main.py  ppo.py  search.py  solve_fo.py  solve_po.py  utils.py
